[gd_scene load_steps=5 format=3 uid="uid://bjxhuscgjdgt6"]

[ext_resource type="Script" path="res://enermy/enermy.gd" id="1_5fe60"]
[ext_resource type="Texture2D" uid="uid://d18560530jjpf" path="res://icon.svg" id="1_xe7b1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kdesd"]
radius = 6.5724

[sub_resource type="CircleShape2D" id="CircleShape2D_7eo0y"]
radius = 55.0205

[node name="enermy" type="CharacterBody2D"]
input_pickable = true
script = ExtResource("1_5fe60")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.681016, 0.135576, 0.172874, 1)
position = Vector2(0, 30.5)
scale = Vector2(0.296875, 0.773438)
texture = ExtResource("1_xe7b1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 34)
scale = Vector2(-2.92, 7.50667)
shape = SubResource("CircleShape2D_kdesd")

[node name="detected_enermy" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detected_enermy"]
position = Vector2(0, 31.5)
scale = Vector2(0.8, 1.04)
shape = SubResource("CircleShape2D_7eo0y")

[connection signal="area_entered" from="detected_enermy" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="detected_enermy" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="detected_enermy" to="." method="_on_area_2d_input_event"]
